@@ -1,3 +1,13 @@
+2002-06-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* fit latest prelude-getopt API change.
+
+2002-06-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* plugins/simple/simple.c (read_multiline): 
+	moved to libprelude, common function.
+	(parse_ruleset): use prelude_read_multiline().
+
 2002-06-16  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
 	* plugins/simple/simple.c: 
